fix endpoint path

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script>
         $('document').ready(function() {
             $('#get-btn').click(function() {
-                $.post('http://localhost:8080/authenticate',
+                $.post('./authenticate',
                     {
                         peerId: 'TestPeerID',
                         sessionToken: '4CXS0f19nvMJBYK05o3toTWtZF5Lfd2t6Ikr2lID'
