--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,14 @@
             });
         });
     </script>
+    <style>
+        #apikey {
+            font-family: monospace;
+        }
+    </style>
 </head>
 <body>
-<input type="text" id="apikey" placeholder="API Key">
+<input type="text" id="apikey" placeholder="API Key" size="36">
 <input type="button" id="get-btn" value="Get Credential">
 <pre id="result"></pre>
 </body>
