--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
             $('#get-btn').click(function() {
                 $.post('./authenticate',
                     {
-                        peerId: 'TestPeerID',
+                        peerId: $('#peerId').val(),
                         sessionToken: '4CXS0f19nvMJBYK05o3toTWtZF5Lfd2t6Ikr2lID'
                     }, function(credential) {
                         $('#result').text(JSON.stringify(credential, null, 2));
 
                         // use the credential to create new Peer() here.
-                        var peer = new Peer('TestPeerID', {
+                        var peer = new Peer($('#peerId').val(), {
                             key: $('#apikey').val(),
                             credential: credential
                         });
@@ -40,6 +40,7 @@
 </head>
 <body>
 <input type="text" id="apikey" placeholder="API Key" size="36">
+<input type="text" id="peerId" placeholder="Peer ID" size="16">
 <input type="button" id="get-btn" value="Get Credential">
 <pre id="result"></pre>
 </body>
