--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,12 @@
             $('#get-btn').click(function() {
                 $.post('./authenticate',
                     {
-                        peerId: $('#peerId').val(),
                         sessionToken: '4CXS0f19nvMJBYK05o3toTWtZF5Lfd2t6Ikr2lID'
                     }, function(credential) {
                         $('#result').text(JSON.stringify(credential, null, 2));
 
                         // use the credential to create new Peer() here.
-                        var peer = new Peer($('#peerId').val(), {
+                        var peer = new Peer({
                             key: $('#apikey').val(),
                             credential: credential
                         });
