--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
             $('#get-btn').click(function() {
                 $.post('./authenticate',
                     {
+                        peerId: $('#peerId').val(),
                         sessionToken: '4CXS0f19nvMJBYK05o3toTWtZF5Lfd2t6Ikr2lID'
                     }, function(credential) {
                         $('#result').text(JSON.stringify(credential, null, 2));
