--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,25 @@
     <script>
         $('document').ready(function() {
             $('#get-btn').click(function() {
+                var peerId = $('#peerId').val();
                 $.post('./authenticate',
                     {
-                        peerId: $('#peerId').val(),
-                        sessionToken: '4CXS0f19nvMJBYK05o3toTWtZF5Lfd2t6Ikr2lID'
+                        peerId: peerId,
+                        sessionToken: 'dummy'
                     }, function(credential) {
                         $('#result').text(JSON.stringify(credential, null, 2));
 
-                        // use the credential to create new Peer() here.
-                        var peer = new Peer($('#peerId').val(), {
-                            key: $('#apikey').val(),
-                            credential: credential
-                        });
+                        if (peerId.length === 0) {
+                            var peer = new Peer({
+                                key: $('#apikey').val(),
+                                credential: credential
+                            });
+                        } else {
+                            var peer = new Peer(peerId, {
+                                key: $('#apikey').val(),
+                                credential: credential
+                            });
+                        }
 
                         peer.on('open', function() {
                             $('#result').text($('#result').text() + '\n' + 'peerId: ' + peer.id);
