send/receive accessToken with cookie

--- a/public/index.html
+++ b/public/index.html
@@ -4,49 +4,8 @@
     <meta charset="UTF-8">
     <title>Authentication Sample</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
-    <script>
-        $('document').ready(function() {
-            $('#get-btn').click(function() {
-                var peerId = $('#peerId').val();
-                $.post('./authenticate',
-                    {
-                        peerId: peerId,
-                        sessionToken: 'dummy'
-                    }, function(credential) {
-                        $('#result').text(JSON.stringify(credential, null, 2));
-
-                        if (peerId.length === 0) {
-                            var peer = new Peer({
-                                key: $('#apikey').val(),
-                                credential: credential
-                            });
-                        } else {
-                            var peer = new Peer(peerId, {
-                                key: $('#apikey').val(),
-                                credential: credential
-                            });
-                        }
-
-                        peer.on('open', function() {
-                            $('#result').text($('#result').text() + '\n' + 'peerId: ' + peer.id);
-                            setTimeout(function() {
-                                peer.disconnect();
-                            }, 1000);
-                        });
-
-                        peer.on('error', function(e) {
-                            console.error(e);
-                            alert('Signaling server returned error');
-                        });
-                    }
-                ).fail(function(e) {
-                    console.error(e);
-                    alert('Auth server returned error');
-                });
-            });
-        });
-    </script>
+    <script src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
+    <script src="skyway-auth.js"></script>
     <style>
         #apikey {
             font-family: monospace;
