--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Authentication Sample</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
-    <script src="skyway-auth.js"></script>
+    <script src="https://skyway-auth.herokuapp.com/skyway-auth.js"></script>
     <script>
         $('document').ready(function() {
             $('#get-btn').click(function() {
